--- a/README.org
+++ b/README.org
@@ -30,4 +30,5 @@
 
 * History
 
-   First offered @Lyon: Fall 2022 (Undergrad). 
+   First offered @Lyon: Fall 2022 (Undergrad). Offered again in: Fall
+   2024, Fall 2026, Fall 2028.
