--- a/org/syllabus.org
+++ b/org/syllabus.org
@@ -11,59 +11,70 @@
 - Professor's Office: Derby Science Building 210
 - Phone: (870) 307-7254 (office) / (501) 422-4725 (private)
 - Office hours: Monday through Friday after class (see Canvas)
-- Textbook: Exploratory Data Analysis Using R by Ronald K. Pearson,
-  chapters 1-4 (pp. 1-180) ([[https://www.routledge.com/Exploratory-Data-Analysis-Using-R/Pearson/p/book/9780367571566?utm_source=cjaffiliates&utm_medium=affiliates&cjevent=9173c8f311ad11ed81e9022e0a82b838][CRC Press, 2018]])
+- Textbook: The Book of R (Part III) by T Davies ([[https://nostarch.com/bookofr][NoStarch, 2016]])
 
 * Objectives
 
-Data science is concerned with getting data to work for us, to give us
+*Data science* is concerned with getting data to work for us, to give us
 its (presumed) hidden treasures. Data science has been called "the
 sexiest job of the 21st century". Even if you don't want to become a
 professonial data scientist, it's helpful to master the basic concepts
 if you want to succeed in today's data-driven business.
 
-This course focuses on visualizing data. There are many tools and
-platforms out there to visualize patterns found in data and tell
-engaging, convincing stories. As a data scientist, you have to know
-what's out there, understand the principles of good visual
-presentation, and be able to customize plots quickly.
+Data science is known to be math and stats heavy, but most of the
+math power is under the hood - you don't see much of it. This
+course will help you bridge the gap between what you already know
+and what is required to do exploratory data analysis. In this
+class, real datasets are used extensively, and all work is
+supported by R coding.
 
-In this course, we look at popular platforms like Tableau and R Shiny,
-and at different packages within R.
+We cover applications like PCA, mixture distributions, random graph
+models, Hidden Markov models, linear and logistic regression, Monte
+Carlo simulations, and neural networks. The course leads the student
+to think critically about the how and why of probability and
+statistics, and to see the big picture. The course is not
+theorem/proof oriented.
+
+You will get lectures, practice sessions with interactive notebooks
+(in Emacs) and weekly quizzes. You will work on a term project alone
+or in a group that you will present. Prerequisites are calculus, some
+matrix algebra, and some experience in programming (it doesn't need to
+be R). This course is cross-referenced as a math special topics course
+(MTH 445). This course will be offered again in fall 2024.
 
 * Target audience
 
-The course is for anyone who is interested in
-becoming more data literate in their own field of interest - be it
-languages, theatre, biology, psychology or exercise science - and
-growing their personal skill stack. 
-
-Visualization of data-driven insights and improved productivity when
-working with data and media is a concern for any professional. 
+The course is for anyone who is interested in becoming more data
+literate in their own field of interest - be it languages, theatre,
+biology, psychology or exercise science - and growing their personal
+skill stack.
 
 * Student Learning Outcomes
 
-Students who complete "Data visualization" (DSC 302) will be
-able to:
+Students who complete "Applied math for data science" (DSC 482) will
+have a foundational understanding and coding abilities in these areas:
 
-- Learn about, and use popular data science visualization platforms
-- Understand how to visualiye exploratory data analysis results
-- Apply literate programming principles to their work with Org-mode
-- Use infrastructure including command line, Emacs, and GitHub
-- Develop their critical thinking skills
-- Know how to effectively present assignment and project results
+- Elementary summary statistics and implementation in R
+- Visually exploring data with plotting across a range of plot types
+- Overview of the concepts of probability and random variables
+- R implementation and stats interpretation of distributions
+- Literate programming with Emacs and Org-mode
+- Statistical programming with R + ESS
+- Professional presentation of agile team projects 
 
-This introduction to Exploratory Data Analysis prepares course
-participants for taking DSC 305, "Machine learning".
+In connection with a course on linear algebra, this course prepares
+participants especially for taking DSC 305, "Machine learning" (spring
+2023).
 
 * Course requirements
 
-Introduction to programming (CSC 100 or CSC 115). Some knowledge of,
-and experience with programming and using the R language is useful but
-not critical. Curiosity is essential. You will gain data literacy
-skills by taking this course. The course will prepare you for further
-studies in computer and data science, or in other disciplines that use
-modern computing, i.e. every discipline, from accounting to zoology).
+Introduction to programming (CSC 100 or CSC 115), calculus, matrix
+algebra. Some knowledge of, and experience with programming and using
+the R language is useful but not critical. Curiosity is essential. You
+will gain data literacy skills by taking this course. The course will
+prepare you for further studies in computer and data science, or in
+other disciplines that use modern computing, i.e. every discipline,
+from accounting to zoology).
 
 * Grading system
 
@@ -129,7 +140,6 @@ term results, only straight letters are given (by rounding up).
 - Research exploratory data analysis project
 - Apply agile project management methods
 - Present your results during 3 sprint reviews
-
 * Standard Policies
 ** Honor Code
 
@@ -247,8 +257,7 @@ of this syllabus. Those details will include at least the following:
   collaboration on graded work.
 - A clear statement about which LMS is being used for the course.
 * Learning Management System (LMS)
-
-We will use Canvas in this course ([[https://lyon.instructure.com/courses/568][lyon.instructure.com/courses/568]]).
+We will use Canvas in this course ([[https://lyon.instructure.com/courses/655][lyon.instructure.com/courses/655]]).
 * Assignments and Honor Code
 
 There will be several assignments during the summer school,
@@ -303,13 +312,11 @@ an extension. Extensions will *not* be granted for reasons such as:
     prior to the scheduled time.  If you are sick the day of the test,
     please e-mail me or leave a message on my phone before the
     scheduled time, and we can make arrangements when you return.
-* Attendance policy
+* TODO Attendance policy
 
-In accordance with college policy, you must attend a minimum of 80% of
-non-cancelled meetings without risking a fail. This means that you
-must attend a minimum of 32/40 meetings. If you miss more than 8
-meetings, you fail the class automatically. Any missed meetings result
-in an [[https://catalog.lyon.edu/class-attendance]["Early Alert" report]].
+In accordance with college policy, if you miss 4 weeks of class, you
+fail the course automatically. Any missed meetings result in an [[https://catalog.lyon.edu/class-attendance]["Early
+Alert" report]].
 
 You should take care not to miss consecutive sessions if at all
 possible - otherwise you risk losing touch with the class and falling
@@ -331,70 +338,59 @@ behind.
   | December 2     | Last day of classes             |
   | December 14    | Final grades due                |
 
-- Class session schedule  
+- Class session schedule
   #+name: tab:schedule
-  | WK | NO | DATE       | TESTS      | TEXTBOOK           | ASSIGNMENT[fn:1]                   |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  |  1 |  1 | Wed-17-Aug | Entry Test |                    | 1. Visualizing distributions [DC]  |
-  |    |  2 | Fri-19-Aug |            |                    | 2. Emacs tutorial                  |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  |  2 |  3 | Mon-22-Aug | Test 1     | 1. Data, EDA, R    | 3. Visualizing two variables [DC]  |
-  |    |  4 | Wed-24-Aug |            |                    |                                    |
-  |    |  5 | Fri-26-Aug |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  |  3 |  6 | Mon-29-Aug | Test 2     | 2. Graphics in R   | 4. The color and the shape [DC]    |
-  |    |  7 | Wed-31-Aug |            |                    |                                    |
-  |    |  8 | Fri-02-Sep |            |                    | 1st Sprint review                  |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  |  4 |  9 | Wed-07-Sep | Test 3     | 2.3 plot()         | 5. 99 problems... [DC]             |
-  |    | 10 | Fri-09-Sep |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  |  5 | 11 | Mon-12-Sep | Test 4     | 2.4 Adding details | 6. Intro to base R graphics [DC]   |
-  |    | 12 | Wed-14-Sep |            |                    |                                    |
-  |    | 13 | Fri-16-Sep |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  |  6 | 14 | Mon-19-Sep | Test 5     | 2.5 Plot types     | 7. Different plot types [DC]       |
-  |    | 15 | Wed-21-Sep |            |                    |                                    |
-  |    | 16 | Fri-23-Sep |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  |  7 | 17 | Mon-26-Sep | Test 6     | 2.6 Plot arrays    | 8. Adding details to plots [DC]    |
-  |    | 18 | Wed-28-Sep |            |                    |                                    |
-  |    | 19 | Fri-30-Sep |            |                    | 2nd Sprint Review                  |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  |  8 | 20 | Wed-05-Oct | Test 7     | 2.7 Color graphics | 9. How much is too much? [DC]      |
-  |    | 21 | Fri-07-Oct |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  |  9 | 22 | Mon-10-Oct | Test 8     | 3.1 Exploring data | 10. Adv plot customization [DC]    |
-  |    | 23 | Wed-12-Oct |            |                    |                                    |
-  |    | 24 | Fri-14-Oct |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  | 10 | 25 | Mon-24-Oct | Test 9     | 3.2 Numerical data | 11. Intro to ggplot [DC]           |
-  |    | 26 | Wed-26-Oct |            |                    |                                    |
-  |    | 27 | Fri-28-Oct |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  | 11 | 28 | Mon-31-Oct | Test 10    | 3.3 Anomalies      | 12. Building web apps w/shiny [DC] |
-  |    | 29 | Wed-02-Nov |            |                    | 3rd Sprint Review                  |
-  |    | 30 | Fri-04-Nov |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  | 12 | 31 | Mon-07-Nov | Test 11    | 3.4 Relationships  | 13. Introduction to Tableau [DC]   |
-  |    | 32 | Wed-09-Nov |            |                    |                                    |
-  |    | 33 | Fri-11-Nov |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  | 13 | 34 | Mon-14-Nov | Test 12    | 4 External data    | 14. External data                  |
-  |    | 35 | Wed-16-Nov |            |                    |                                    |
-  |    | 36 | Fri-18-Nov |            |                    |                                    |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  | 14 | 37 | Mon-21-Nov | Test 13    | 4.74. RSQLite      | 15. RSQLite                        |
-  |----+----+------------+------------+--------------------+------------------------------------|
-  | 15 | 38 | Mon-28-Nov | Test 14    |                    | Final Sprint review                |
-  |    | 39 | Wed-30-Nov |            |                    | Final Sprint review                |
-  |    | 40 | Fri-02-Dec |            |                    | Final Sprint review                |
-  |----+----+------------+------------+--------------------+------------------------------------|
+  | WK | NO | DATE       | TESTS      | TEXTBOOK                     | ASSIGNMENT[fn:1]                   |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |  1 |  1 | Tue-16-Aug | Entry Test |                              |                                    |
+  |    |  2 | Thu-18-Aug |            |                              | 1. Emacs tutorial                  |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |  2 |  3 | Tue-23-Aug | Test 1     | 13. Elementary statistics    | 2. Introduction to statistics      |
+  |    |  4 | Thu-25-Aug |            |                              |                                    |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |  3 |  5 | Tue-30-Aug | Test 2     |                              | 3. Probability and distributions   |
+  |    |  6 | Thu-01-Sep |            |                              | 1st Sprint Review                  |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |  4 |  7 | Tue-06-Sep | Test 3     |                              | 4. Central Limit Theorem           |
+  |    |  8 | Thu-08-Sep |            |                              |                                    |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |  5 |  9 | Tue-13-Sep | Test 4     | 14. Basic data visualization | 5. Correlation/experiments         |
+  |    | 10 | Thu-15-Sep |            |                              |                                    |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |  6 | 11 | Tue-20-Sep | Test 5     |                              | 6. Summary statistics in R         |
+  |    | 12 | Thu-22-Sep |            |                              |                                    |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |  7 | 13 | Tue-27-Sep | Test 6     |                              | 7. Random numbers/probability in R |
+  |    | 14 | Thu-29-Sep |            |                              | 2nd Sprint Review                  |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |  8 | 15 | Thu-06-Oct | Test 7     | 15. Probability              | 8. Central limit theorem in R      |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |  9 | 16 | Tue-11-Oct | Test 8     |                              | 9. Correlation/experiments in R    |
+  |    | 17 | Thu-13-Oct |            |                              |                                    |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  | 10 | 18 | Tue-18-Oct | Test 9     |                              | 10. The binomial distribution      |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  | 11 | 19 | Tue-25-Oct | Test 10    |                              | 11. Laws of probability            |
+  |    | 20 | Thu-27-Oct |            |                              | 3rd Sprint Review                  |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  | 12 | 21 | Tue-01-Nov | Test 11    | 16. Distributions            | 12. Bayesian statistics            |
+  |    | 22 | Thu-03-Nov |            |                              |                                    |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  | 13 | 23 | Tue-08-Nov | Test 12    |                              | 13. Related distributions          |
+  |    | 24 | Thu-10-Nov |            |                              |                                    |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  | 14 | 25 | Tue-15-Nov | Test 13    | 20. Linear regression        | 14. Simple linear regression       |
+  |    | 26 | Thu-17-Nov |            |                              |                                    |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  | 15 | 27 | Mon-22-Nov | Test 14    |                              | 15. Predictions and model objects  |
+  |----+----+------------+------------+------------------------------+------------------------------------|
+  |    | 28 | Tue-29-Nov |            |                              | Final Sprint review                |
+  |    | 29 | Thu-01-Dec |            |                              | Final Sprint review                |
+  |----+----+------------+------------+------------------------------+------------------------------------|
 
 * Footnotes
 
-[fn:1]Assignments include selected chapters from five different
-DataCamp courses: "Data Visualization for Everyone", "Data
-Visualization in R", "Introduction to Tableau", "Introduction to Data
-Visualization with ggplot2", and "Building web applications with shiny
-in R".
+[fn:1]Assignments 2-15 are DataCamp assignments from the following
+courses: 1) [[https://app.datacamp.com/learn/courses/introduction-to-statistics][Introduction to statistics]] (2-5), 2) [[https://www.datacamp.com/courses/introduction-to-statistics-in-r][Introduction to
+statistics in R]] (6-9), 3) [[https://www.datacamp.com/courses/foundations-of-probability-in-r][Foundations of probability in R]] (10-13),
+and 4) [[https://www.datacamp.com/courses/introduction-to-regression-in-r][Introduction to regression in R]] (14-15).
