--- a/org/agenda.org
+++ b/org/agenda.org
@@ -1,19 +1,18 @@
-#+TITLE:Agenda - DSC 302
+#+TITLE:Agenda - DSC 482 / MTH 445
 #+AUTHOR:Marcus Birkenkrahe
-#+SUBTITLE:Agenda - DSC 302 - Data Visualization, Fall 2022
+#+SUBTITLE:Agenda - DSC 482 - Applied Math for Data Science, Fall 2022
 #+STARTUP:overview hideblocks indent
 #+OPTIONS: toc:nil num:nil ^:nil
 * README
 
-- DSC 302 focuses on data visualization, and especially EDA
-  (Exploratory Data Analysis). 
+- DSC 482 focuses on statistics, probability and distributions
 - We use R as a language, GNU Emacs as editor, ESS as statistics
   extension, and Org-mode for literate programming
 - For details on objectives, audience, grading, schedule, check the
   [[https://github.com/birkenkrahe/ds1/blob/piHome/org/syllabus.org][syllabus]] or the [[https://github.com/birkenkrahe/org/blob/master/FAQ.org][FAQ]] on GitHub.
 - This file contains a (dynamically updated) agenda for each session
   as well as some content.
-- You can also look at [[https://github.com/birkenkrahe/dviz/blob/piHome/org/agenda.org][the agenda on GitHub]].
+- You can also look at [[https://github.com/birkenkrahe/dsmath/blob/piHome/org/agenda.org][the agenda on GitHub]].
 
 * FAQ - FREQUENTLY ASKED QUESTIONS
 
