--- a/org/syllabus.org
+++ b/org/syllabus.org
@@ -6,7 +6,7 @@
 * General Course Information
 
 - Meeting Times: Tuesday + Thursday from 8 AM - 9.15 AM
-- Meeting place: Derby Science Building Computer Lab 209
+- Meeting place: Lyon Building Computer Lab room 104
 - Professor: Marcus Birkenkrahe
 - Professor's Office: Derby Science Building 210
 - Phone: (870) 307-7254 (office) / (501) 422-4725 (private)
