--- a/org/agenda.org
+++ b/org/agenda.org
@@ -1,7 +1,7 @@
 #+TITLE:Agenda - DSC 482 / MTH 445
 #+AUTHOR:Marcus Birkenkrahe
 #+SUBTITLE:Agenda - DSC 482 - Applied Math for Data Science, Fall 2022
-#+STARTUP:overview hideblocks indent
+#+STARTUP:overview hideblocks indent inlineimages
 #+OPTIONS: toc:nil num:nil ^:nil
 * README
 
@@ -9,10 +9,10 @@
 - We use R as a language, GNU Emacs as editor, ESS as statistics
   extension, and Org-mode for literate programming
 - For details on objectives, audience, grading, schedule, check the
-  [[https://github.com/birkenkrahe/ds1/blob/piHome/org/syllabus.org][syllabus]] or the [[https://github.com/birkenkrahe/org/blob/master/FAQ.org][FAQ]] on GitHub.
+  [[https://github.com/birkenkrahe/dsmath/blob/main/org/syllabus.org][syllabus]] or the [[https://github.com/birkenkrahe/org/blob/master/FAQ.org][FAQ]] on GitHub.
 - This file contains a (dynamically updated) agenda for each session
   as well as some content.
-- You can also look at [[https://github.com/birkenkrahe/dsmath/blob/piHome/org/agenda.org][the agenda on GitHub]].
+- You can also look at [[https://github.com/birkenkrahe/dsmath/blob/main/org/agenda.org][the agenda on GitHub]].
 
 * FAQ - FREQUENTLY ASKED QUESTIONS
 
@@ -26,18 +26,18 @@
 
 * WEEK 1: INTRODUCTION TO THE COURSE
 
-- Mutual introductions
 - Review: Entry test
-- Course overview
+- Lecture: Course overview
+- Discussion: Mutual introductions
+- Lecture: Data Science At The End Of Modern Time
 - Practice: course infrastructure
-- Assignments
+- Homework: Assignments
 - Glossary
 
 * Week 2: GETTING STARTED
 
 - Quiz 1: course infrastructure
-- Lectures: Data, Exploratory Data Analysis, and R
-- Practice: Metadata identification
-- Practice: Representative R session
+- Lectures: Describing raw data
+- Practice: Getting started with R
   
     
